<resources>
    <string name="app_name">TV guide</string>
    <string name="now_title">On the air %1s</string>
    <string name="now_title_default">On the air</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="textView2">Enter a text view</string>

    <string name="action_download">Download</string>
    <string name="task_download_file">Downloading a guide&#8230;</string>
    <string name="task_load_list">Loading from file&#8230;</string>
    <string name="task_update_list">Refresh list&#8230;</string>
    <string name="action_download_previous">Download a previous guide</string>
    <string name="Hour_short">h.</string>
    <string name="Minute_short">min.</string>
    <string name="title_activity_channel_list">Channels</string>
    <string name="action_channellist">Channels</string>
    <string name="mark_all_as_favorite">Mark all as favorites</string>
    <string name="unmark_all_as_favorite">Unmark all favorites</string>
    <string name="action_ShowOnlyFavorites">Switch favorites only</string>
    <string name="needclosebecausenocurrent">There is no current TV Guide on %s. Please, try again later.</string>
    <string name="title_activity_one_channel_program">OneChannelProgram</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="menu_share">Share</string>
    <string name="menu_createevent">Add to Calendar</string>
    <string name="empty_channel_number">n/d</string>
    <string name="search_title">Search</string>
    <string name="SearchQueryHint">Enter text to find</string>
    <string name="menu_remind">Reminde</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_searchInInternet">Search in Internet</string>
    <string name="needclosebecausewronhgxml">Downloaded file contains an error, it is impossible to read program. Please, try again later.</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate">Rate</string>
    <string name="rate_prompt">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="menu_channel">Channel</string>
    <string name="newchannelinfo">New channels have found: \n%1s</string>
    <string name="error">Error</string>
    <string name="searchInInternetItemErrorDescription">It is impossibly to run search due configuration of your device. PLease use COPY menu and make a search manually. Sorry for inconvenience.</string>
    <string name="menu_viewTutorialVideo">Open tutorial video on YouTube</string>
    <string name="tutorialErrorDescription">It is impossibly to open YouTube.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="settings_source">Source</string>
    <string name="setting_source_mtis">MTIS</string>
    <string name="setting_source_full">Full</string>
    <string name="action_reload">Load</string>
    <string name="settings_favoriteSet">Your TV provider</string>
    <string name="settings_big_description">select your settings :)</string>
    <string name="menu_tvpower">Turn on</string>
    <string name="task_load_object">Read from cache</string>
    <string name="action_shownotes_on">Description: on</string>
    <string name="action_shownotes_off">Description: off</string>
    <string name="task_save_cache">Saving a cache...</string>
    <string name="task_sorting">Sorting...</string>
    <string name="settings_timeshift_label">Коррекция времени передач в часах</string>


</resources>
