<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.z81.z81tvguide.SettingsActivity">


    <ScrollView
        android:id="@+id/settings_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/form1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sourceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/settings_source" />

            <Spinner
                android:id="@+id/sourceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_favoriteSet" />

            <Spinner
                android:id="@+id/faforitSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_big_description" />
            <TextView
                android:id="@+id/timeShiftLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_timeshift_label" />

            <Spinner
                android:id="@+id/timeShiftSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/timeShiftArray"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
